<resources>
    <string name="app_name">ProjectAppMobile</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="todo">TODO</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirma_tu_contrase_a">confirma tu contraseña</string>
    <string name="registrate">Registrate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_accelerometer">Accelerometer</string>
    <string name="string_gyroscope">Gyroscope</string>
    <string name="format_x_value">X: %.2f</string>
    <string name="format_y_value">Y: %.2f</string>
    <string name="format_z_value">Z: %.2f</string>
    <string name="text_open_game_room">Abrir sala de juegos</string>
    <string name="text_my_gestures">Mis gestos</string>
    <string name="text_my_profile">Mi perfil</string>
    <string name="text_navigation_gestures">Gestos de navegación</string>
    <string name="string_home">Inicio</string>
    <string name="text_game_room">Sala de juegos</string>
    <string name="text_indications_room_connect">"Abra la página web de la aplicación e introduzca el código que aparece en pantalla "</string>
    <string name="string_get_in">Ingresar</string>
    <string name="string_back">Regresar</string>
    <string name="error_socket_send_message">No se pudo enviar mensaje al servidor</string>
    <string name="text_save_config">Guardar configuración</string>
    <string name="text_sensibility_1">Sensibilidad de muestra</string>
    <string name="text_sensibility_2">Sensibilidad de ventana</string>
    <string name="text_sensibility_3">Sensibilidad de velocidad</string>
    <string name="msg_saved_successfully">Configuración guardada exitosamente</string>
    <string name="text_test_mode">Modo Test</string>
    <string name="text_add_gesture">Añadir un gesto</string>
    <string name="hint_write_a_gesture_name">Escriba un nombre para el gesto</string>
    <string name="string_record">Grabar</string>
    <string name="text_save_sample">Guardar muestra</string>
    <string name="text_add_to_existing_gestures">Añadir a gestos existentes</string>
    <string name="string_associated_function">Función asociada</string>
    <string name="msg_invalid_data">Uno de los datos ingresados es inválido</string>
    <string name="msg_saved">Guardado</string>
    <string name="text_general_config">General</string>
    <string name="string_epochs">Épocas</string>
    <string name="text_update_gesture">Actualizar gesto</string>
    <string name="text_title_navigation_1">Elegir elemento</string>
    <string name="text_description_navigation_1">Puede elegir el elemento enmarcado</string>
    <string name="text_title_navigation_2">Seleccionar elemento anterior</string>
    <string name="text_description_navigation_2">Selecciona el elemento anterior</string>
    <string name="text_title_navigation_3">Seleccionar elemento siguiente</string>
    <string name="text_description_navigation_3">Selecciona el elemento siguiente</string>
</resources>