<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module_home.HomeActivity"
    android:background="@drawable/background_bubbles"
    >

    <TextView
        style="@style/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/string_home" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:orientation="vertical"
        android:padding="30dp"
        >

        <Button
            android:id="@+id/buttonHomeOpenGameRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/buttonThemeRound"
            android:text="@string/text_open_game_room"
            />
        <Button
            android:id="@+id/buttonHomeMyGestures"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/buttonThemeRound"
            android:text="@string/text_my_gestures"
            />
        <Button
            android:id="@+id/buttonHomeMyProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/buttonThemeRound"
            android:text="@string/text_my_profile"
            />
        <Button
            android:id="@+id/buttonHomeNavigationGestures"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/buttonThemeRound"
            android:text="@string/text_navigation_gestures"
            />
        <Button
            android:id="@+id/buttonHomeTestMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:text="@string/text_test_mode"
            android:visibility="gone"
            />


    </LinearLayout>

    <!--TODO: agregar imagen real-->
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_baseline_image_200dp" />

</RelativeLayout>