<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".module_gestures.NavigationGesturesActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border"
            android:layout_margin="5dp"
            android:padding="5dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textViewTitle"
                android:text="@string/text_title_navigation_1"
                android:textSize="18sp"
                android:textAlignment="center"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    style="@style/textViewNormalText"
                    android:text="@string/text_description_navigation_1"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    />

                <!--todo: agregar los gifs asociados -->
                <pl.droidsonroids.gif.GifImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/waiting"

                    />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border"
            android:layout_margin="5dp"
            android:padding="5dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textViewTitle"
                android:text="@string/text_title_navigation_2"
                android:textSize="18sp"
                android:textAlignment="center"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    style="@style/textViewNormalText"
                    android:text="@string/text_description_navigation_2"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    />

                <pl.droidsonroids.gif.GifImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/waiting"

                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border"
            android:layout_margin="5dp"
            android:padding="5dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textViewTitle"
                android:text="@string/text_title_navigation_3"
                android:textSize="18sp"
                android:textAlignment="center"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    style="@style/textViewNormalText"
                    android:text="@string/text_description_navigation_3"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    />

                <pl.droidsonroids.gif.GifImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/waiting"

                    />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/buttonNavigationGesturesBack"
            android:background="@drawable/button_enabled_disabled"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/string_back"
            />

    </LinearLayout>

</ScrollView>