<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module_gestures.view.AddGestureActivity"
    android:background="@drawable/background_bubbles"
    >

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:progressTint="@color/colorAppPrimary" />

    <LinearLayout
        android:id="@+id/linearLayoutFreeModeHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <TextView
            style="@style/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_add_gesture" />

        <ImageButton
            android:id="@+id/imageButtonAddGestureConfig"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="4"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:src="@android:drawable/ic_menu_preferences"
            android:tint="@color/colorBlack"
            android:visibility="invisible"
            />

        <ImageButton
            android:id="@+id/imageButtonAddGestureHelp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@android:color/holo_green_light"
            android:clickable="true"
            android:focusable="true"
            android:src="@android:drawable/ic_menu_help"
            android:tint="@color/colorPrimaryDark" />


    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChartAddGesture"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/linearLayoutFreeModeHead"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp" />

    <LinearLayout
        android:id="@+id/linearLayoutFreeModeChecks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/lineChartAddGesture"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBoxShowAccelerometerChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="Show Accelerometer chart" />

        <CheckBox
            android:id="@+id/checkBoxShowGyroscopeChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="Show Gyroscope chart" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewAddGestureMessages"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/linearLayoutFreeModeChecks"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:alpha="0.7"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorBlack"
        android:scrollbars="vertical"

        android:scrollbarStyle="insideOverlay"
        android:fadeScrollbars="true"
        android:fadingEdge="vertical"
        />

    <LinearLayout
        android:id="@+id/linearLayoutAddGestureButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewAddGestureMessages"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonAddGestureStartRecording"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_enabled_disabled"

            android:text="@string/string_record"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/buttonAddGestureSaveSample"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_enabled_disabled"
            android:enabled="false"
            android:text="@string/text_save_sample"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@+id/linearLayoutAddGestureButtons"
        android:layout_marginTop="5dp"
        >

        <LinearLayout
            android:id="@+id/linearLayoutFreeModeSensibilidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            android:padding="5dp"
            >

            <EditText
                android:id="@+id/editTextAddGestureName"
                style="@style/textViewNormalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_write_a_gesture_name"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    style="@style/textViewNormalText"
                    android:text="@string/string_associated_function"
                    />

                <Spinner
                    android:id="@+id/spinnerAddGestureFunctionsList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    />
            </LinearLayout>



            <Button
                android:id="@+id/buttonAddGestureCommitSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_enabled_disabled_black"

                android:enabled="false"
                android:text="@string/text_add_to_existing_gestures"
                android:textColor="@color/colorWhite"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <Button
                    android:id="@+id/buttonAddGestureBack"
                    android:background="@drawable/button_enabled_disabled"
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/string_back" />



                <!--TODO: agregar imagen real-->
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/ic_baseline_image_200dp" />



            </RelativeLayout>


        </LinearLayout>




    </ScrollView>




</RelativeLayout>