<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module_gestures.view.UpdateGestureActivity"
    android:background="@drawable/background_bubbles"
    >

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:progressTint="@color/colorAppPrimary" />

    <LinearLayout
        android:id="@+id/linearLayoutFreeModeHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <TextView
            style="@style/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_update_gesture" />

        <ImageButton
            android:id="@+id/imageButtonUpdateGestureConfig"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="4"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:src="@android:drawable/ic_menu_preferences"
            android:tint="@color/colorBlack"
            android:visibility="invisible"
            />

        <ImageButton
            android:id="@+id/imageButtonUpdateGestureHelp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@android:color/holo_green_light"
            android:clickable="true"
            android:focusable="true"
            android:src="@android:drawable/ic_menu_help"
            android:tint="@color/colorPrimaryDark" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutUpdateGestureInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutFreeModeHead"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewUpdateGestureName"
            style="@style/textViewNormalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textViewUpdateGestureFunction"
            style="@style/textViewNormalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textAlignment="center" />
    </LinearLayout>


    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChartUpdateGesture"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/linearLayoutUpdateGestureInfo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="0dp" />

    <LinearLayout
        android:id="@+id/linearLayoutFreeModeChecks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/lineChartUpdateGesture"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBoxShowAccelerometerChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="Show Accelerometer chart" />

        <CheckBox
            android:id="@+id/checkBoxShowGyroscopeChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="Show Gyroscope chart" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewUpdateGestureMessages"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/linearLayoutFreeModeChecks"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:alpha="0.7"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorBlack"
        android:scrollbars="vertical"

        android:scrollbarStyle="insideOverlay"
        android:fadeScrollbars="true"
        android:fadingEdge="vertical"
        />

    <LinearLayout
        android:id="@+id/linearLayoutUpdateGestureButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewUpdateGestureMessages"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonUpdateGestureStartRecording"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_enabled_disabled"

            android:text="@string/string_record"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/buttonUpdateGestureSaveSample"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_enabled_disabled"
            android:enabled="false"
            android:text="@string/text_save_sample"
            android:textColor="@color/colorWhite" />
    </LinearLayout>


    <Button
        android:id="@+id/buttonUpdateGestureCommitSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutUpdateGestureButtons"

        android:layout_marginTop="5dp"
        android:background="@drawable/button_enabled_disabled_black"
        android:enabled="false"
        android:text="@string/text_add_to_existing_gestures"
        android:textColor="@color/colorWhite" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonUpdateGestureCommitSave"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="1dp">

        <Button
            android:id="@+id/buttonUpdateGestureBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"

            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_enabled_disabled"
            android:text="@string/string_back"
            android:textColor="@color/colorWhite" />


        <!--TODO: agregar imagen real-->
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_baseline_image_200dp" />


    </RelativeLayout>





</RelativeLayout>